
- Added the FbxQueryFS() and FbxQueryFSTags() functions.

- Added the FbxGetSysTime() function.


filesysbox.library 54.1 (14.1.2023)

- A rename operation with exactly the same source and destination is now
  treated as a no-op and returns success rather than ERROR_OBJECT_EXISTS.

- Rename operations where the the only change is in letter casing (e.g.
  "rename tmp TMP") no longer fail with ERROR_OBJECT_EXISTS on case
  insensitive file system implementations.

- Advance the file position in FSWrite() also if write() returns a lower
  number of bytes written than was specified.

- Implemented the same charset conversion system that is used in the latest
  AmigaOS 4 filesysbox versions. Internally filesysbox still uses UTF-8 for
  all strings and conversion only happens when strings are passed to or from
  the AmigaDOS API. In order for the conversion to be reversible any UTF-8
  characters that do not have an equivalent in the local charset will be
  converted into URL-style escape sequences where the character is specified
  as a base32 encoded character sequence preceded by a percent symbol.


filesysbox.library 54.2 (16.2.2023)

- Fixed support for codesets other than ISO-8859-1/latin-1 (was not working
  before due to size and attributes parameters being switched around in the
  AllocMem() call).

- Now ignores the ".language" extension when looking for a codeset based on
  loc_LanguageName.

- UTF-8 to local charset conversion now uses an AVL tree instead of iterating
  over the maptable array to find a match.

- Added experimental ACTION_DIE packet support.


filesysbox.library 54.3 (d.m.2023)

- AllocFuseFileInfo() did not clear the allocated fuse_file_info structure
  which resulted in randomly occurring bugs like otherwise legal ACTION_SEEK
  packets failing with ERROR_ACTION_NOT_KNOWN if the nonseekable flag happened
  to be set. This has now been fixed by explicitly clearing the memory before
  it is used.
